--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8082:8080"
     environment:
-      - DATABASE_URL=jdbc:postgresql://java_db:5432/postgres
+      - DATABASE_URL=jdbc:postgresql://java-dbPosgres:5432/postgres
       - DATABASE_PASSWORD=postgres
       - DATABASE_USERNAME=postgres
     depends_on:
